2006-03-13  Don Porter  <dgp@users.sourceforge.net>

	* tests/constraints.tcl:	Added notAqua constraint to canvPs-3.1
	* tests/canvPs.test:		to stop test suite crash on Mac OSX.
					[Bug 1088807]

	* generic/tkCmds.c:		Purged remaining references to
	* macosx/tkMacOSXPort.h:	errno, and errno.h.  Standardized
	* macosx/tkMacOSXWm.c:		the logic for using header files from
	* macosx/tkMacOSXWm.h:		the compat directory.  Thanks Joe
	* unix/tkUnixPort.h:		English for the patch. [Patch 1445404]

2006-03-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/bgerror.tcl (::tk::dialog::error::bgerror): Truncated error
	details were getting lost, leading to unreadable error messages.

2006-03-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/canvas.n: Added note that stipples are not well-supported on
	non-X11 platforms. [Bug 220787] It's not a great solution, but it does
	indicate the state of affairs that has existed for years anyway; not
	much modern software uses stipples anyway.

2006-03-07  Don Porter  <dgp@users.sourceforge.net>

	* READNE:		Bump version number to 8.4.13 and update
	* changes:		changes to start prep for an 8.4.13 release.
	* generic/tk.h:
	* unix/configure{.in}:
	* unix/tk.spec:
	* win/configure{.in}:

2006-03-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in: convert _NATIVE paths to use / to avoid ".\"
	path-as-escape issue.

	* unix/tcl.m4, win/tcl.m4: []-quote ac_defun functions.

	* macosx/tkMacOSXDraw.c (TkPutImage): fix endian issue on OS X x86
	displaying images.  Bitmap images still have a black/white
	reversal issue, appears to be a general OS X issue (as seen in
	frogger demo).

2006-03-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* unix/tcl.m4:    Fix for tk bug #1334613 to sort out shared library
	* unix/configure: issues on NetBSD. Regenerated configure script.

2006-02-27  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>

	* generic/tkBitmap.c (Tk_GetBitmapFromData): Improve thread-safety.