@@ -1,5 +1,8 @@
 2006-03-13  Don Porter  <dgp@users.sourceforge.net>
 
+	* tests/scrollbar.test:	Corrected several broken calls to [testmetrics]
+	that were crashing the test suite.
+
 	* tests/constraints.tcl:	Added notAqua constraint to canvPs-3.1
 	* tests/canvPs.test:		to stop test suite crash on Mac OSX.
 					[Bug 1088807]
